plugins/kotlin/idea/tests/testData/highlighterMetaInfo/diagnostics/javaCodeInKotlinFile1.kt.highlighting
// KTIJ-24099
// ALLOW_ERRORS

<!HIGHLIGHTING("textAttributesKey='KOTLIN_BUILTIN_ANNOTATION'")!>public<!> class <!HIGHLIGHTING("textAttributesKey='KOTLIN_CLASS'")!>Hierarchy<!> <!HIGHLIGHTING("severity='ERROR'; descr='Expecting a top level declaration'")!>extends<!> <!HIGHLIGHTING("severity='ERROR'; descr='Expecting a top level declaration'")!>KotlinOnlyClass<!> <!HIGHLIGHTING("severity='ERROR'; descr='Expecting a top level declaration'")!>{<!>
    <!HIGHLIGHTING("severity='ERROR'; descr='[UNRESOLVED_REFERENCE] Unresolved reference: void'")!>void<!> <!HIGHLIGHTING("severity='ERROR'; descr='[DEBUG] Reference is not resolved to anything, but is not marked unresolved'; textAttributesKey='KOTLIN_DEBUG_INFO'")!>companionMembers<!>(<!HIGHLIGHTING("severity='ERROR'; descr='Expecting an expression'")!>)<!> {
        <!HIGHLIGHTING("severity='ERROR'; descr='[UNRESOLVED_REFERENCE] Unresolved reference: Custom'")!>Custom<!> <!HIGHLIGHTING("severity='ERROR'; descr='[DEBUG] Reference is not resolved to anything, but is not marked unresolved'; textAttributesKey='KOTLIN_DEBUG_INFO'")!>companionlateinitVariable<!> <!HIGHLIGHTING("severity='ERROR'; descr='Expecting an element'")!>=<!> <!HIGHLIGHTING("severity='ERROR'; descr='[DEBUG] Reference is not resolved to anything, but is not marked unresolved'; textAttributesKey='KOTLIN_DEBUG_INFO'")!>KotlinOnlyClass<!><!HIGHLIGHTING("severity='ERROR'; descr='Expecting an element'")!>.<!><!HIGHLIGHTING("severity='ERROR'; descr='[DEBUG] Reference is not resolved to anything, but is not marked unresolved'; textAttributesKey='KOTLIN_DEBUG_INFO'")!>companionlateinitVariable<!><!HIGHLIGHTING("severity='ERROR'; descr='Expecting an element'")!>;<!>
        <!HIGHLIGHTING("severity='ERROR'; descr='[UNRESOLVED_REFERENCE] Unresolved reference: Custom'")!>Custom<!> <!HIGHLIGHTING("severity='ERROR'; descr='[DEBUG] Reference is not resolved to anything, but is not marked unresolved'; textAttributesKey='KOTLIN_DEBUG_INFO'")!>companionlateinitStaticVariable<!> <!HIGHLIGHTING("severity='ERROR'; descr='Expecting an element'")!>=<!> <!HIGHLIGHTING("severity='ERROR'; descr='[DEBUG] Reference is not resolved to anything, but is not marked unresolved'; textAttributesKey='KOTLIN_DEBUG_INFO'")!>KotlinOnlyClass<!><!HIGHLIGHTING("severity='ERROR'; descr='Expecting an element'")!>.<!><!HIGHLIGHTING("severity='ERROR'; descr='[DEBUG] Reference is not resolved to anything, but is not marked unresolved'; textAttributesKey='KOTLIN_DEBUG_INFO'")!>companionlateinitStaticVariable<!><!HIGHLIGHTING("severity='ERROR'; descr='Expecting an element'")!>;<!>

    }<!HIGHLIGHTING("severity='ERROR'; descr='Expecting '}''")!><!>
